--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: cift_teker_front
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.6.0
   flutter_secure_storage: ^9.2.4
   intl: ^0.18.1
+  google_maps_flutter: ^2.14.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +57,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -63,8 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/ciftTeker.png
-   - assets/grupSurus.png
+    - assets/ciftTeker.png
+    - assets/grupSurus.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
