--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   dio: ^5.9.0
   http: ^1.6.0
   flutter_secure_storage: ^9.2.4
-  intl: ^0.18.1
+  intl: ^0.20.2
+  flutter_localizations:
+    sdk: flutter
   google_maps_flutter: ^2.14.0
   geolocator: ^14.0.2
 
