--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.18.1
   google_maps_flutter: ^2.14.0
   geolocator: ^14.0.2
+  web_socket_channel: ^3.0.3
+  stomp_dart_client: ^3.0.1
 
 dev_dependencies:
   flutter_test:
