--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.6.0
+  firebase_storage: ^12.1.0
+  cloud_functions: ^5.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +48,7 @@ dependencies:
   geolocator: ^14.0.2
   web_socket_channel: ^3.0.3
   stomp_dart_client: ^3.0.1
+  firebase_core: ^4.2.1
 
 dev_dependencies:
   flutter_test:
