--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^12.1.0
   cloud_functions: ^5.3.0
   cached_network_image: ^3.2.3
+  mask_text_input_formatter: ^2.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
