--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore: ^5.6.0
   firebase_storage: ^12.1.0
+  firebase_auth: ^5.7.0
   cloud_functions: ^5.3.0
   cached_network_image: ^3.2.3
   mask_text_input_formatter: ^2.8.0
+  path: ^1.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
