--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   web_socket_channel: ^3.0.3
   stomp_dart_client: ^3.0.1
   jwt_decoder: ^2.0.1
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
