--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ android/key.properties
 android/app/debug/
 android/app/profile/
 android/app/release/
+android/app/src/main/AndroidManifest.xml
 
 # iOS
 ios/Pods/
